// Drawable.java
// Interface for anything that should be reset when a new game starts

package com.gamecodeschool.subhunter;

public interface Resettable {
    void reset();
}

