@startuml

' Define interfaces
interface Drawable {
}

interface Resettable {
}

' Define classes
class MainActivity {
}

class GameContext {
}

class GameView {
}

class Submarine {
}

class Shot {
}

class Grid {
}

class GameOverScreen {
}

class Debug {
}

' Implementations
Player -up-|> Resettable
Submarine -up-|> Resettable
Submarine -up-|> Drawable
Shot -up-|> Resettable
Shot -up-|> Drawable
Grid -up-|> Drawable
GameOverScreen -up-|> Drawable

@enduml
